@@ -7,6 +7,7 @@ import com.senla.hotel.service.IBookingService;
 import com.senla.hotel.util.EntityDtoMapper;
 import com.senla.hoteldb.entity.Booking;
 import com.senla.hoteldb.entity.Guest;
+import com.senla.hoteldb.entity.Room;
 import com.senla.hoteldb.repository.BookingRepository;
 import com.senla.hoteldb.repository.GuestRepository;
 import com.senla.hoteldb.repository.RoomRepository;
@@ -15,12 +16,11 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.text.ParseException;
-import java.text.SimpleDateFormat;
-import java.time.Duration;
+import java.time.LocalDate;
+import java.time.Period;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Comparator;
-import java.util.Date;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Objects;
@@ -29,6 +29,7 @@ import java.util.stream.Collectors;
 
 @Service
 public class BookingServiceImpl implements IBookingService {
+    public static final String PATTERN = "dd-MM-yyyy";
     private final BookingRepository bookingRepository;
     private final RoomRepository roomRepository;
     private final GuestRepository guestRepository;
@@ -42,6 +43,10 @@ public class BookingServiceImpl implements IBookingService {
         this.roomRepository = roomRepository;
         this.guestRepository = guestRepository;
         this.entityDtoMapper = entityDtoMapper;
+    }
+
+    public void setRoomHistoryLimit(Integer roomHistoryLimit) {
+        this.roomHistoryLimit = roomHistoryLimit;
     }
 
     @Override
@@ -87,36 +92,53 @@ public class BookingServiceImpl implements IBookingService {
     //    The amount of payment for the room to be paid by the guest;
     @Override
     public double getTotalPaymentByGuest(long guestId) {
-        Booking booking = getByGuestId(guestId);
-        Duration duration = Duration.between(new Date(booking.getCheckInDate().getTime()).toInstant(), new Date(booking.getCheckOutDate().getTime()).toInstant());
-        return roomRepository.findById(booking.getRoom().getId()).orElseThrow(() -> new NoSuchElementException("There is no such a booking with id->" + booking.getRoom().getId())).getPrice() * duration.toDays();
+        List<Room> rooms = roomRepository.findAll();
+        List<Booking> bookings = bookingRepository.findAll();
+        double totalPayment = 0;
+        for (Booking booking : bookings) {
+            double payment = 0;
+            if (booking.getGuest().getId() == guestId) {
+                int period = Period.between(booking.getCheckInDate(), booking.getCheckOutDate()).getDays();
+                payment = period * rooms.stream().filter(r -> r.getId().equals(booking.getRoom().getId())).findAny().orElseThrow(() -> new NoSuchElementException("There is no such a booking with id->")).getPrice();
+            }
+            totalPayment = totalPayment + payment;
+        }
+        return totalPayment;
     }
 
     //    List of rooms that will be available on a certain date in the future;
     @Transactional
     @Override
     public List<RoomDto> findAvailableRoomsByDate(String dateString) {
-        System.out.println("DATE->" + dateString);
-        Date date;
-        try {
-            date = new SimpleDateFormat("dd-MM-yyyy").parse(dateString);
-        } catch (ParseException e) {
-            throw new IllegalArgumentException("Wrong date format. Proper format:dd-MM-yyyy");
-        }
+        LocalDate date = LocalDate.parse(dateString, DateTimeFormatter.ofPattern(PATTERN));
+        List<RoomDto> availableRooms = new ArrayList<>();
+        List<Room> rooms = roomRepository.findAll();
         List<Booking> bookings = bookingRepository.findAll();
-        return bookings.stream()
-                .filter(b -> ((b.getCheckInDate().after(date) && b.getCheckOutDate().after(date)) ||
-                        (b.getCheckInDate().before(date) && b.getCheckOutDate().before(date))))
-                .map(b -> roomRepository.findById(b.getRoom().getId()).orElseThrow(() -> new NoSuchElementException("There is no such a room with id->" + b.getRoom().getId())))
-                .map(room -> entityDtoMapper.convertFromEntityToDto(room, RoomDto.class))
-                .collect(Collectors.toList());
+        List<RoomDto> roomDtoList = rooms.stream()
+                .map(room -> entityDtoMapper.convertFromEntityToDto(room, RoomDto.class)).toList();
+        for (RoomDto roomDto : roomDtoList) {
+            if (isRoomAvailableOnDate(roomDto, date, bookings)) {
+                availableRooms.add(roomDto);
+            }
+        }
+        return availableRooms;
+    }
+
+    private boolean isRoomAvailableOnDate(RoomDto roomDto, LocalDate dateToCheck, List<Booking> bookings) {
+        for (Booking booking : bookings) {
+            if (booking.getRoom().getId().equals(roomDto.getId())) {
+                return dateToCheck.isBefore(booking.getCheckInDate()) || dateToCheck.isAfter(booking.getCheckOutDate());
+            }
+        }
+        return true;
     }
 
     @Override
-    public long findCountOfAllGuests() {
-        Date currentDate = new Date();
+    public long findCountOfAllGuests(String dateString) {
+        LocalDate date = LocalDate.parse(dateString, DateTimeFormatter.ofPattern(PATTERN));
+
         return bookingRepository.findAll().stream()
-                .filter(b -> b.getCheckInDate().before(currentDate) && b.getCheckOutDate().after(currentDate))
+                .filter(b -> (b.getCheckInDate().isBefore(date) || b.getCheckInDate().isEqual(date)) && (b.getCheckOutDate().isAfter(date) || b.getCheckOutDate().isEqual(date)))
                 .count();
     }
 
